--- a/data process/6_ais_dataset_process_hs.ipynb
+++ b/data process/6_ais_dataset_process_hs.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6 For data exploratoin (visualization) "
+    "## 6 Training dataset creation - concatenating months (Jan to Oct) "
    ]
   },
   {
